<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>owl_sense</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="davide.botturi@prospecto.cloud">davide</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS runtime deps -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>ament_index_python</depend>

  <!-- Python/system libs via rosdep keys -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>   <!-- provides the 'cv2' module -->
  <exec_depend>my_msgs</exec_depend>


  <!-- tests/linters (keep what you already had) -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <buildtool_depend>ament_python</buildtool_depend>


</package>
